2008-10-08  Jan Schmidt  <jan.schmidt@sun.com>

	* plugins/elements/gstqueue.c:
	Allow through queries when we don't know how
	to adjust them (not TIME or BYTES), as otherwise it's
	not possible to query the current position in order
	to seek in other formats at all.

2008-10-08  Andy Wingo  <wingo@pobox.com>

	* docs/gst/gstreamer-sections.txt: Placate doc pendants.

2008-10-08  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstghostpad.c:
	* gst/gstghostpad.h:
	Unbreak -good build, private is a reserved c++ keyword.

2008-10-08  Andy Wingo  <wingo@pobox.com>

	* gst/gstghostpad.h (GST_GHOST_PAD_CAST):
	* gst/gstghostpad.c (GST_GHOST_PAD_CAST): Fix unintended API
	removal: re-add GST_GHOST_PAD_CAST to the header.

	* gst/gstghostpad.h (GstProxyPad, GstProxyPadClass, GstGhostPad)
	(GstGhostPadClass): Publically expose these structures so as to
	allow easy subclassing from C. Hide the member data behind a
	private opaque data pointer.

	* gst/gstghostpad.c: Adapt to store instance data in the type
	instance's private data region, not in the public struct.

2008-10-08  Andy Wingo  <wingo@pobox.com>

	* gst/gstghostpad.c (gst_ghost_pad_construct): If we got a
	template via g_object_get(), be sure to unref it.

	* gst/gstbuffer.h (GST_BUFFER_FREE_FUNC): Fix incorrect doc.

2008-10-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/gstregistrybinary.c: (gst_registry_binary_write_cache):
	If we can't get a cache file don't try to save something to it.
	Dereferencing NULL pointers usually isn't a good idea.

2008-10-07  Jan Schmidt - Sun Microsystems <jan.schmidt@sun.com>

	* tests/check/Makefile.am:
	* tests/check/gst/gstabi.c:
	* tests/check/gst/struct_sparc.h:
	* tests/check/libs/libsabi.c:
	* tests/check/libs/struct_sparc.h:
	Add Sparc ABI checks

	* tests/check/gst/gstvalue.c: (GST_START_TEST):
	Cast signed integer to unsigned to avoid a compiler warning.

2008-10-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
